Camera parented to curve incorrectly updates when "lock to view" is ON and “camera parent lock” is OFF #45802

Closed
opened 2015-08-15 03:42:46 +02:00 by Dolphin Dream · 4 comments
Member

System Information
Various systems.. yosemite 64, ubuntu 64

Blender Version
2.74 (hash 43c756a)

Short description of error
When camera is parented to a CURVE object and the “Lock camera to view” is enabled and the “camera parent lock” is disabled (in preferences/interface) when panning, rotating and zooming in the viewport (while looking through the active camera) the camera updates incorrectly (it offsets randomly).

Exact steps for others to reproduce the error
See the enclosed blend file: a scene with a plane and two circle objects parented to the plane.. one object is a curve circle, the other is a mesh circle. The camera is currently parented to the curve circle. The left viewport displays the scene viewed through the active camera and the “lock camera to view is enabled”. Make sure the user preferences has the “camera parent lock” off. Try to pan, rotate or zoom the camera or even select an object and numpad . ( “view selected” ) to center the camera around the selected object (on my system the camera does not center around the object.. the object is off center). If you parent the camera to the MESH circle object the camera manipulation works fine. It seems that the curve objects parents present an anomaly while the mesh objects do not.

cameraParentToCurveBug.blend

**System Information** Various systems.. yosemite 64, ubuntu 64 **Blender Version** 2.74 (hash 43c756a) **Short description of error** When camera is parented to a CURVE object and the “Lock camera to view” is enabled and the “camera parent lock” is disabled (in preferences/interface) when panning, rotating and zooming in the viewport (while looking through the active camera) the camera updates incorrectly (it offsets randomly). **Exact steps for others to reproduce the error** See the enclosed blend file: a scene with a plane and two circle objects parented to the plane.. one object is a curve circle, the other is a mesh circle. The camera is currently parented to the curve circle. The left viewport displays the scene viewed through the active camera and the “lock camera to view is enabled”. Make sure the user preferences has the “camera parent lock” off. Try to pan, rotate or zoom the camera or even select an object and numpad . ( “view selected” ) to center the camera around the selected object (on my system the camera does not center around the object.. the object is off center). If you parent the camera to the MESH circle object the camera manipulation works fine. It seems that the curve objects parents present an anomaly while the mesh objects do not. [cameraParentToCurveBug.blend](https://archive.blender.org/developer/F224444/cameraParentToCurveBug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MariusGiurgi

Added subscriber: @MariusGiurgi

This issue was referenced by ce2d342df5

This issue was referenced by ce2d342df5a4d82064e97dc455a5884cfc6c311a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45802
No description provided.