Fix T45802: View Lock w/ Curve-Parent fails